--- a/rough/r1.html
+++ b/rough/r1.html
@@ -5,8 +5,154 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    body{
+      background-image: linear-gradient( rgb(255, 224, 224), rgb(208, 253, 255)); 
+    opacity: 0.3;                              }
+  </style>
 </head>
 <body>
-<iframe width="1536" height="864" src="https://www.cowin.gov.in/" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+
+
+  <canvas></canvas>
+
+
+
+
+<script>
+
+  var canvas = document.querySelector('canvas');
+
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  // We will always refer 'context' using variable 'c' 
+  var c = canvas.getContext('2d');
+
+  // Animation
+
+  var mouse = {
+    x: undefined,
+    y: undefined
+  }
+
+  var maxRadius = 500;
+  var minRadius = 90;
+
+  var colorArray = [
+    'red',
+    '#BB8D8D',
+    'white',
+    '#D55E5E',
+    '#5E58A2'
+  ];
+  // console.log(colorArray.length);
+
+  window.addEventListener('resize', function () {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    init();
+  });
+
+  window.addEventListener('click', function (event) {
+    // console.log(event);
+    mouse.x = event.x;
+    mouse.y = event.y;
+    console.log(mouse);
+  })
+
+  function Circle(x, y, dx, dy, radius) {
+    this.x = x;
+    this.y = y;
+    this.dx = dx;
+    this.dy = dy;
+    this.radius = radius;
+    this.minRadius = radius;
+    this.color = colorArray[Math.floor(Math.random() * colorArray.length)];
+
+    this.draw = function () {
+      // console.log('krubc');
+      c.beginPath();
+      c.arc(this.x, this.y, this.radius, 0, Math.PI *2, false);
+      // c.strokeStyle = 'yellow';
+      // c.stroke();
+      c.fillStyle = this.color;
+      c.fill();
+    }
+
+    this.update = function () {
+      if (this.x + this.radius > innerWidth || this.x - this.radius < 0) {
+        this.dx = -this.dx;
+      }
+
+      if (this.y + this.radius > innerHeight || this.y - this.radius < 0) {
+        this.dy = -this.dy;
+      }
+
+      this.x += this.dx;
+      this.y += this.dy;
+
+      //Interactivity
+      if (mouse.x - this.x < 50 && mouse.x - this.x > -50 && mouse.y - this.y < 50 && mouse.y - this.y > -50) {
+        if (this.radius < maxRadius) {
+          this.radius += 1;
+        }
+      } else if (this.radius > this.minRadius) {
+        this.radius -= 1;
+      }
+
+      this.draw();
+    }
+
+  }
+
+  var circleArray = [];
+
+
+  // console.log(circleArray);
+
+  // var circle = new Circle(200, 200, 3, 3, 50);
+
+  function init() {
+
+    circleArray = [];
+
+    for (var i = 0; i < 200; i++) {
+      var radius = Math.random() * 1.2+ 5;
+      var x = Math.random() * (innerWidth - radius * 2) + radius;
+      var y = Math.random() * (innerHeight - radius * 2) + radius;
+      var dx = (Math.random() - 0.5) * 8;
+      var dy = (Math.random() - 0.5) * 8;
+      circleArray.push(new Circle(x, y, dx, dy, radius));
+
+    }
+
+  }
+
+  function animate() {
+
+    // creating a loop using below statement by calling function inside the function itself
+    requestAnimationFrame(animate);
+    // console.log('sdchba');
+
+    c.clearRect(0, 0, innerWidth, innerHeight);
+
+    for (var i = 0; i < circleArray.length; i++) {
+      circleArray[i].update();
+    }
+
+  }
+
+  init();
+
+  animate();
+</script>
+
+
+
+
+
+  
 </body>
 </html>
