--- a/rough/r1.html
+++ b/rough/r1.html
@@ -6,15 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    body{
-      background-image: linear-gradient( rgb(255, 224, 224), rgb(208, 253, 255)); 
-    opacity: 0.3;                              }
+    *{
+      padding: 0;
+      margin: 0;
+    }
+    canvas{
+      background-image: linear-gradient( rgb(255, 183, 183), rgb(139, 249, 255)); 
+    opacity: 0.3;
+  }
+
+
+
   </style>
 </head>
 <body>
 
 
-  <canvas></canvas>
+  <canvas>
+
+  </canvas>
 
 
 
@@ -118,12 +128,12 @@
 
     circleArray = [];
 
-    for (var i = 0; i < 200; i++) {
-      var radius = Math.random() * 1.2+ 5;
+    for (var i = 0; i < 60; i++) {
+      var radius = Math.random() *8+ 20;
       var x = Math.random() * (innerWidth - radius * 2) + radius;
       var y = Math.random() * (innerHeight - radius * 2) + radius;
-      var dx = (Math.random() - 0.5) * 8;
-      var dy = (Math.random() - 0.5) * 8;
+      var dx = (Math.random() - 0.5) * 4;
+      var dy = (Math.random() - 0.5) * 4;
       circleArray.push(new Circle(x, y, dx, dy, radius));
 
     }
